--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <version>1.2.13</version>
         </dependency>
 
+        <!-- UI Framework - FlatLaf (Modern Look and Feel) -->
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.2.5</version>
+        </dependency>
+
         <!-- JSON Processing -->
         <dependency>
             <groupId>com.alibaba</groupId>
